tests/rosetta/out/Swift/abc-problem.error
run error: exit status 1
/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:3:25: error: cannot assign value of type '[Any]' to type '[String]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:24Z
 2 | func fields(_ s: String) -> [String] {
 3 |     var res: [String] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[String]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 4 |     var cur = ""
 5 |     var i = 0

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:7:23: error: 'subscript(_:)' is unavailable: cannot subscript String with an integer range, use a String.Index range instead.
 5 |     var i = 0
 6 |     while i < s.count {
 7 |         let c = Array(s[i..<i + 1])
   |                       `- error: 'subscript(_:)' is unavailable: cannot subscript String with an integer range, use a String.Index range instead.
 8 |         if c == " " {
 9 |             if cur.count > 0 {

Swift.String.subscript:3:10: note: 'subscript(_:)' has been explicitly marked unavailable here
1 | struct String {
2 | @available(*, unavailable, message: "cannot subscript String with an integer range, use a String.Index range instead.")
3 |   public subscript<R>(bounds: R) -> String where R : RangeExpression, R.Bound == Int { get }}
  |          `- note: 'subscript(_:)' has been explicitly marked unavailable here
4 | 

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:8:14: error: binary operator '==' cannot be applied to operands of type '[String.Element]' (aka 'Array<Character>') and 'String'
 6 |     while i < s.count {
 7 |         let c = Array(s[i..<i + 1])
 8 |         if c == " " {
   |              |- error: binary operator '==' cannot be applied to operands of type '[String.Element]' (aka 'Array<Character>') and 'String'
   |              `- note: overloads for '==' exist with these partially matching parameter lists: (String, String)
 9 |             if cur.count > 0 {
10 |                 res = res + [cur]

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:28:13: error: cannot find 'lower' in scope
26 |         return true
27 |     }
28 |     let c = lower(Array(word[0..<1]))
   |             `- error: cannot find 'lower' in scope
29 |     var i = 0
30 |     while i < blks.count {

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:32:17: error: cannot find 'lower' in scope
30 |     while i < blks.count {
31 |         let b = blks[i]
32 |         if c == lower(Array(b[0..<1])) || c == lower(Array(b[1..<2])) {
   |                 `- error: cannot find 'lower' in scope
33 |             var rest: [String] = [Any]()
34 |             var j = 0

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:32:48: error: cannot find 'lower' in scope
30 |     while i < blks.count {
31 |         let b = blks[i]
32 |         if c == lower(Array(b[0..<1])) || c == lower(Array(b[1..<2])) {
   |                                                `- error: cannot find 'lower' in scope
33 |             var rest: [String] = [Any]()
34 |             var j = 0

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:33:34: error: cannot assign value of type '[Any]' to type '[String]'
31 |         let b = blks[i]
32 |         if c == lower(Array(b[0..<1])) || c == lower(Array(b[1..<2])) {
33 |             var rest: [String] = [Any]()
   |                                  |- error: cannot assign value of type '[Any]' to type '[String]'
   |                                  `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
34 |             var j = 0
35 |             while j < blks.count {

/tmp/TestMochiToSwiftabc-problem1885197892/001/main.swift:41:25: error: cannot convert value of type 'Array<String.Element>' (aka 'Array<Character>') to expected argument type 'String'
39 |                 j = j + 1
40 |             }
41 |             if canSpell(Array(word[1..<word.count]), rest) {
   |                         `- error: cannot convert value of type 'Array<String.Element>' (aka 'Array<Character>') to expected argument type 'String'
42 |                 return true
43 |             }
